add_subdirectory(greedy)
add_subdirectory(double-pointers)
add_subdirectory(sorting)
add_subdirectory(dynamic_program)
add_subdirectory(binary_search)
add_subdirectory(divide_and_conquer)
add_subdirectory(data-structures-linked-list)
add_subdirectory(data-structures-heap)
add_subdirectory(ds-stack)
add_subdirectory(search)
add_subdirectory(others)